--- a/workskin/workskin.css
+++ b/workskin/workskin.css
@@ -33,7 +33,8 @@
     text-shadow: 1px 0px black, 0px 1px black, -1px 0px black, 0px -1px black;
 }
 #workskin .tadc-narration > .zooble {
-    color: #2BCFCF;
+    /* color: #2BCFCF; */
+    color: #26BABA;
     text-shadow: 1px 0px black, 0px 1px black, -1px 0px black, 0px -1px black;
 }
 #workskin .tadc-narration > .gangle {
@@ -113,7 +114,8 @@
     background-color: #C9A6E0;
 }
 #workskin .tadc-dialog-zooble {
-    background-color: #2BCFCF;
+    /* background-color: #2BCFCF; */
+    background-color: #26BABA;
 }
 #workskin .tadc-dialog-gangle {
     background-color: #FF8DAA;
